--- a/index.html
+++ b/index.html
@@ -4,65 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <table>
-        <thead>
-            <tr>
-                <td>Heading 1</td>
-                <td>Heading 2</td>
-                <td>Heading 3</td>
-                <td>Heading 4</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Row Header</td>
-                <td>row item 1</td>
-                <td>row item 2</td>
-                <td>row item 3</td>
-            </tr>
-            <tr>
-                <td>Row Header</td>
-                <td>row item 1</td>
-                <td>row item 2</td>
-                <td>row item 3</td>
-            </tr>
-            <tr>
-                <td>Row Header</td>
-                <td>row item 1</td>
-                <td>row item 2</td>
-                <td>row item 3</td>
-            </tr>
-            <tr>
-                <td>Row Header</td>
-                <td>row item 1</td>
-                <td>row item 2</td>
-                <td>row item 3</td>
-            </tr>
-            <tr>
-                <td>Row Header</td>
-                <td>row item 1</td>
-                <td>row item 2</td>
-                <td>row item 3</td>
-            </tr>
-            <tr>
-                <td>Row Header</td>
-                <td>row item 1</td>
-                <td>row item 2</td>
-                <td>row item 3</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>Footer Head</td>
-                <td><span>footer 1</span></td>
-                <td><span>footer 2</span></td>
-                <td><span>footer 3</span></td>
-            </tr>
-        </tfoot>
-    </table>
+    <main>
+        <section>
+            <nav >
+                <ul class="nav-list">
+                    <li class="list-item"><a href="#" class="link">Home</a></li>
+                    <li class="list-item"><a href="#" class="link">WordPress</a></li>
+                    <li class="list-item"><a href="#" class="link">Webdesign+</a>
+                    <ul class="sub-nav-list">
+                        <li class="list-item sub-list-item"><a href="#" class="link">Resourses</a></li>
+                        <li class="list-item sub-list-item"><a href="#" class="link">Link</a></li>
+                        <li class="list-item sub-list-item"><a href="#" class="link">Tutorials</a></li>
+                    </ul>
+                    </li>
+                    <li class="list-item">Graphic Design<a href="#" class="link"></a></li>
+                    <li class="list-item">Inspiration<a href="#" class="link"></a></li>
+                    <li class="list-item">Contacts<a href="#" class="link"></a></li>
+                    <li class="list-item">About<a href="#" class="link"></a></li>
+                </ul>
+
+            </nav>
+
+            <article>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta perspiciatis labore necessitatibus, voluptate a explicabo, reprehenderit quibusdam optio eaque dolorem at veritatis excepturi itaque, nemo deleniti. Assumenda corrupti tempore voluptas ipsum suscipit, quibusdam sapiente repudiandae recusandae, asperiores tempora ipsam architecto explicabo dolore sunt cumque natus exercitationem consectetur aliquam ullam ex.</article>
+        </section>
+
+    </main>
 </body>
 </html>
