--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
                 <ul class="nav-list">
                     <li class="list-item"><a href="#" class="link">Home</a></li>
                     <li class="list-item"><a href="#" class="link">WordPress</a></li>
-                    <li class="list-item"><a href="#" class="link">Webdesign+</a>
-                    <ul class="sub-nav-list">
-                        <li class="list-item sub-list-item"><a href="#" class="link">Resourses</a></li>
-                        <li class="list-item sub-list-item"><a href="#" class="link">Link</a></li>
-                        <li class="list-item sub-list-item"><a href="#" class="link">Tutorials</a></li>
-                    </ul>
+                    <li class="list-item"><a href="#" class="link">Web design+</a>
+                        <ul class="sub-nav-list">
+                            <li class="list-item sub-list-item"><a href="#" class="link">Resourses</a></li>
+                            <li class="list-item sub-list-item"><a href="#" class="link">Link</a></li>
+                            <li class="list-item sub-list-item"><a href="#" class="link">Tutorials+</a>
+                                    <ul class="sub-nav-list">
+                                        <li class="list-item sub-list-item"><a href="#" class="link">HTML</a></li>
+                                        <li class="list-item sub-list-item"><a href="#" class="link">jQuery</a></li>
+                                        <li class="list-item sub-list-item"><a href="#" class="link">Other+</a>
+                                                <ul class="sub-nav-list">
+                                                    <li class="list-item sub-list-item"><a href="#" class="link">Stuff</a></li>
+                                                    <li class="list-item sub-list-item"><a href="#" class="link">Things</a></li>
+                                                    <li class="list-item sub-list-item"><a href="#" class="link">Other Stuff</a></li>
+                                                </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
                     <li class="list-item">Graphic Design<a href="#" class="link"></a></li>
                     <li class="list-item">Inspiration<a href="#" class="link"></a></li>
